// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxAsyncSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12211,
              "size": 12801,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12211,
              "size": 12353,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 448,
                "ok": false,
                "percent": 315.4929577464789,
              },
              "initialSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "size": Object {
                "absolute": 448,
                "ok": true,
                "percent": 3.626649396907644,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 0.44 kb (315.49%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff not match - global 1`] = `Array []`;

exports[`maxAsyncSizeDiff not match - override global 1`] = `Array []`;

exports[`maxAsyncSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12211,
              "size": 12801,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12211,
              "size": 12353,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 448,
                "ok": false,
                "percent": 315.4929577464789,
              },
              "initialSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "size": Object {
                "absolute": 448,
                "ok": true,
                "percent": 3.626649396907644,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 0.44 kb (315.49%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 29129,
              "size": 30329,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12277,
              "size": 12419,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": false,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 16852,
                "ok": true,
                "percent": 137.26480410523743,
              },
              "size": Object {
                "absolute": 17910,
                "ok": true,
                "percent": 144.21451002496175,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 1.03 kb (745.07%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff global 1`] = `Array []`;

exports[`maxInitialSizeDiff not match - global 1`] = `Array []`;

exports[`maxInitialSizeDiff not match - override global 1`] = `Array []`;

exports[`maxInitialSizeDiff override global 1`] = `Array []`;

exports[`maxInitialSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 8348,
              "size": 8348,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 799,
              "size": 799,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 7549,
                "ok": false,
                "percent": 944.8060075093867,
              },
              "size": Object {
                "absolute": 7549,
                "ok": true,
                "percent": 944.8060075093867,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 7.37 kb (944.81%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 29129,
              "size": 30329,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12277,
              "size": 12419,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": true,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 16852,
                "ok": false,
                "percent": 137.26480410523743,
              },
              "size": Object {
                "absolute": 17910,
                "ok": true,
                "percent": 144.21451002496175,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 16.46 kb (137.26%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12211,
              "size": 12801,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12211,
              "size": 12353,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 448,
                "ok": true,
                "percent": 315.4929577464789,
              },
              "initialSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "size": Object {
                "absolute": 448,
                "ok": false,
                "percent": 3.626649396907644,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 0.44 kb (3.63%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff not match - global 1`] = `Array []`;

exports[`maxSizeDiff not match - override global 1`] = `Array []`;

exports[`maxSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12211,
              "size": 12801,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12211,
              "size": 12353,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 448,
                "ok": true,
                "percent": 315.4929577464789,
              },
              "initialSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "size": Object {
                "absolute": 448,
                "ok": false,
                "percent": 3.626649396907644,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 0.44 kb (3.63%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 8348,
              "size": 8348,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 799,
              "size": 799,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 7549,
                "ok": true,
                "percent": 944.8060075093867,
              },
              "size": Object {
                "absolute": 7549,
                "ok": false,
                "percent": 944.8060075093867,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 7.37 kb (944.81%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 29129,
              "size": 30329,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12277,
              "size": 12419,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": true,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 16852,
                "ok": true,
                "percent": 137.26480410523743,
              },
              "size": Object {
                "absolute": 17910,
                "ok": false,
                "percent": 144.21451002496175,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 17.49 kb (144.21%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
